finished legal notice html and css for loged in users or guests

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/navBar.css">
     <link rel="stylesheet" href="./styles/standard.css">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/legal-notice.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -64,8 +65,110 @@
                 </div>
             </div>
             <div class="content-right">
-                <!-- Hier kommt der Code hin! -->
+                <div class="legal-notice-wrapper">
+                    <div class="legal-notice-heaader">
+                        <h1 class="lega-notice-headline">Legal Notice</h1>
+                    </div>
 
+                    <div class="legal-notice-content">
+                        <h3>Imprint</h3>
+                        <ul>
+                            <li>Daniela Hudson, Jannik Hoff, Viktor Vaal</li>
+                            <li>adresse</li>
+                            <li>adresse</li>
+                        </ul>
+                        <div class="passage">
+                            <h3>Exploring the Board</h3>
+                            <span>
+                                Email: vaal.viktor@web.de
+                            </span>
+                        </div>
+
+                        <div class="passage">
+                            <h3>Acceptance of terms</h3>
+                            <span>By accessing and using <span class="color-29ABE2">Join</span> (Product), you acknowlegde and agree ei the following
+                                terms
+                                and conitions, and any policies,
+                                guidelines, or amendments thereto that may be presented to you from time to time. We,
+                                the
+                                listed students, may update or change
+                                the terms and condotions from time to time without notice.
+                            </span>
+                        </div>
+
+                        <div class="passage">
+                            <h3>Scope anf ownership of the product</h3>
+                            <span><span class="color-29ABE2">Join</span> has been developed as part of a student group project in a web development
+                                bootcamp
+                                at the <span class="color-29ABE2">Developer Akademie GmbH</span>. it has
+                                an educational purpose and is not intended for extensive personal & business usage. As
+                                such,
+                                we cannot guarantee consistent
+                                availability, reliability, accuracy, or any other aspect of quality regarding this
+                                Product.
+                                <br>
+                                <br>
+                                The design of <span class="color-29ABE2">Join</span> is owned by the <span class="color-29ABE2">Developer Akademie GmbH</span>. Unauthorized use,
+                                reproduction,
+                                modification, distibution, or
+                                replicationof the design is strictly prohibited.
+                            </span>
+                        </div>
+
+                        <div class="passage">
+                            <h3>Proprietary rights</h3>
+                            <span>Aside from the dasign owned by <span class="color-29ABE2">Developer Akademie GmbH</span>, we the listed students, retain
+                                all
+                                proprietary rights in <span class="color-29ABE2">Join</span>, including any
+                                associated copyrighted material, trademarks, and other proorietary information.
+                            </span>
+                        </div>
+
+                        <div class="passage">
+                            <h3>Use of the product</h3>
+                            <span><span class="color-29ABE2">Join</span> is intended to be used for lawful purposes only, in accordance with all
+                                applicable
+                                laws and regulations. Any use of <span class="color-29ABE2">Join</span> for illigal
+                                activities, or to harass, harm, threaten, or intimidate another person, is strictly
+                                prohibited. You are solely responsible for your
+                                interactions with other users of <span class="color-29ABE2">Join</span>.
+                            </span>
+                        </div>
+
+                        <div class="passage">
+                            <h3>Disclaimer of warranties and limitation of liability</h3>
+                            <span><span class="color-29ABE2">Join</span> is provided "as is" without warranty of any kind, whether express or implied,
+                                including but not limited to the implied warranties of
+                                merchantability, fitness for a particular purpose, and non-infringement. In ne event
+                                will
+                                we, the listed students, or the <span class="color-29ABE2">Developer
+                                Akademie</span>, be liable for any direct, inderect, incidental, special, consequential or
+                                exemplary damages, including but not limited to,
+                                damages for loss of profits, goodwill, use, data, or other intangible losses, even if we
+                                have been advised of the possibility of such
+                                damages, arising out of or in connection with the use or performance of <span class="color-29ABE2">Join</span>.
+                            </span>
+                        </div>
+
+                        <div class="passage">
+                            <h3>Indemnity</h3>
+                            <span>You agree to indemnify, defend and hold harmless us, the listed students, the
+                                <span class="color-29ABE2">Developer Akademie</span>, and our affiliates, partners,
+                                officers, directors, agents, and employees, from and against any claim, demand, loss,
+                                damage, cost, or liability (including reasonable
+                                legal fees) arising out of or relating to your ouse of <span class="color-29ABE2">Join</span> and/or your breach of this
+                                Legal
+                                Notice.
+                                <br>
+                                <br>
+                                For any questions ot notices, pleas contact us at [Contact Email].
+                                <br>
+                                <br>
+                                Date: February 19, 2025
+                            </span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
