--- a/board.html
+++ b/board.html
@@ -315,6 +315,26 @@
         <div id="task-card-overlay"></div>
         <div id="dark-background"></div>
 
+
+        <section class="mobile-nav-section">
+
+            <section class="mobile-navBar">
+                <a href="./summary.html"><button class="mobile_nav_btn nav_summary active" disabled="true"><span><img
+                                src="./assets/img/navBar/summary.svg" alt="">Summary</span></button></a>
+
+                <a href="./add_task.html"><button class="mobile_nav_btn nav_add_task"><span><img
+                                src="./assets/img/navBar/add_task.svg" alt="">Add Task</span></button></a>
+
+                <a href="./board.html"><button class="mobile_nav_btn nav_board"><span><img
+                                src="./assets/img/navBar/board.svg" alt="">Board</span></button></a>
+
+                <a href="./contacts.html"><button class="mobile_nav_btn nav_contacts"><span><img
+                                src="./assets/img/navBar/contacts.svg" alt="">Contacts</span></button></a>
+
+            </section>
+        </section>
+
+
 </body>
 
 </html>
