--- a/sign_up.html
+++ b/sign_up.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styles/signup.css">
+    <script defer src="./scripts/signup.js"></script>
 
     <title>sign up in progress</title>
 </head>
 
-<body>
+<body onload="init()">
 
     <div class="signup-content-box" id="signupContentBox">
 
@@ -36,8 +37,6 @@
                         <span><img src="../assets/svg/mail.svg" alt=""></span>
                     </div>
 
-
-
                     <div class="pw-wrapper">
                         <input type="password" placeholder="Password" id="password">
                         <button type="button" disabled id="pw-icon" onclick="togglePassword()"><img
@@ -50,16 +49,19 @@
                         <button type="button" disabled id="pw-icon" onclick="togglePassword()"><img
                                 src="../assets/svg/lock.svg" alt=""></button>
                     </div>
+                    <span id="error"></span>
 
 
                     <div class="sgnp-button-box">
+
                         <div class="confirm-priv-pol">
                             <input type="checkbox" class="chb-priv-pol" id="chbPrivPol">
                             <label for="chbPrivPol">I agree to the <a href="#" class="priv-polce-link"> Privacy
                                     policy</a></label>
-
+                                    
                         </div>
-                        <button class="signup" onclick="showSignUpMsg(); return false">Sign up</button>
+                        <span id="errorPrivPol"></span>
+                        <button type="submit"  class="signup" onclick="showSignUpMsg(); return false">Sign up</button>
                         <div class="signup-msg  d-none" id="signUpMsg">You have successesfully signed up</div>
                     </div>
                 </form>
@@ -77,7 +79,7 @@
 
     <div class="backdrop d-none" id="backdrop"></div>
 
-    <script src="./scripts/signup.js"></script>
+    
 
 </body>
 
