added random color to contacts

--- a/legal_notice.html
+++ b/legal_notice.html
@@ -64,7 +64,7 @@
                     </div>
                 </div>
             </div>
-            <div class="content-right">
+            <div class="content-right overflow-y-auto">
                 <div class="legal-notice-wrapper">
                     <div class="legal-notice-heaader">
                         <h1 class="lega-notice-headline">Legal Notice</h1>
