--- a/add_task.html
+++ b/add_task.html
@@ -113,7 +113,7 @@
                                         <input class="add-task-input-field placeholder-color" type="text"
                                             id="assigned-to-field" placeholder="Select contacts to assign"
                                             onclick="toggleDropdown(); toggleAssignToIconSrc();   renderAssignedContacts();">
-                                        <div onclick="toggleDropdown(); toggleAssignToIconSrc();"
+                                        <div onclick="toggleDropdown(); toggleAssignToIconSrc(); renderAssignedContacts();"
                                             class="input-icon-assign-to-container">
                                             <img id="input-icon-assign-to"
                                                 src="./assets/svg/addTasksSvg/arrow_drop_down.svg" alt="Icon"
@@ -123,7 +123,14 @@
 
                                         </div>
                                     </div>
+
+                                    <section id="assigned-circles-section" class="assigned-circles-section">
+                                        <div class="addTask-profilepicture">HI</div>
+                                    </section>
+
                                 </div>
+
+
                             </div>
 
                             <div class="add-task-vl"></div>
