improved add contact css

--- a/board.html
+++ b/board.html
@@ -315,7 +315,7 @@
         <div id="task-card-overlay"></div>
         <div id="dark-background"></div>
 
-
+    </div>
         <section class="mobile-nav-section">
 
             <section class="mobile-navBar">
