adding different id and class for the 'repeat pw box'

--- a/sign_up.html
+++ b/sign_up.html
@@ -44,8 +44,8 @@
                     </div>
 
 
-                    <div class="pw-wrapper">
-                        <input type="password" placeholder="Password" id="passwordRepeat">
+                    <div class="rep-pw-wrapper">
+                        <input type="password" placeholder="Password" id="repeatPassword">
                         <button type="button" disabled id="repPwIcon" onclick="togglePassword()"><img
                                 src="../assets/svg/lock.svg" alt=""></button>
                     </div>
