--- a/board.html
+++ b/board.html
@@ -96,7 +96,7 @@
                             <button onclick="openAddTaskOverlay()" class="add-to-do btn-title">+</button>
                         </div>
                         <div ondrop="drop('toDo', event)" ondragover="allowDrop(event)" draggable="true" id="toDo"
-                            class="to-do-field board-field overflow-y-auto"></div>
+                            class="to-do-field board-field"></div>
                     </div>
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
@@ -104,7 +104,7 @@
                             <button onclick="openAddTaskOverlay()" class="add-in-progress btn-title">+</button>
                         </div>
                         <div ondrop="drop('inProgress', event)" ondragover="allowDrop(event)" draggable="true" id="inProgress"
-                            class="in-progress-field board-field overflow-y-auto"></div>
+                            class="in-progress-field board-field"></div>
                     </div>
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
@@ -112,14 +112,14 @@
                             <button onclick="openAddTaskOverlay()" class="add-await-feedback btn-title">+</button>
                         </div>
                         <div ondrop="drop('awaitFeedback', event)" ondragover="allowDrop(event)" draggable="true"
-                            id="awaitFeedback" class="await-feedback-field board-field overflow-y-auto"></div>
+                            id="awaitFeedback" class="await-feedback-field board-field"></div>
                     </div>
                     <div class="board-title-field-wrapper">
                         <div class="to-do-title flex-title">
                             <h3>Done</h3>
                         </div>
                         <div ondrop="drop('done', event)" ondragover="allowDrop(event)" draggable="true" id="done"
-                            class="done-field board-field overflow-y-auto"></div>
+                            class="done-field board-field"></div>
                     </div>
                 </div>
             </div>
