added id to submit button

--- a/sign_up.html
+++ b/sign_up.html
@@ -61,7 +61,7 @@
                                     
                         </div>
                         <span id="errorPrivPol"></span> <!--onclick="showSignUpMsg(); return false" -->
-                        <button type="submit"  class="signup" disabled >Sign up</button>
+                        <button type="submit"  class="signup" id="submitBtn" disabled >Sign up</button>
                         <div class="signup-msg  d-none" id="signUpMsg">You have successesfully signed up</div>
                     </div>
                 </form>
