fixes arrow icon category field

--- a/add_task.html
+++ b/add_task.html
@@ -170,7 +170,7 @@
                                     <label for="">
                                         <p>Category</p>
                                     </label>
-                                    <div onclick="toggleCategoryDropdown()" class="category-input">
+                                    <div class="category-input" onclick="toggleCategoryDropdown()">
                                         <input id="category-field" class="placeholder-color"
                                             placeholder="Select task category" type="text" readonly>
                                         <div class="input-icon-category-container">
