--- a/contacts.html
+++ b/contacts.html
@@ -67,7 +67,19 @@
                 <p>Kanban Project Management Tool</p>
                 <div class="header_btn_and_pic"> <a class="question-mark" href="./hilfe.html"><img
                             class="question-mark-img" src="./assets/img/navBar/help.png" alt=""></a>
-                    <div><img class="profile_picture" src="./assets/img/dog-705820_640.jpg" alt="">
+                    <div style="position: relative;">
+                        <img class="profile_picture" src="./assets/img/dog-705820_640.jpg" alt=""
+                            onclick="toggleMenu()">
+                        <section class="menu">
+                            <div class="menu-btns">
+                                <a href="#" class="menu-item">Help</a>
+                                <a href="./legal_notice.html" class="menu-item">Legal Notice</a>
+                                <a href="./datenschutz.html" class="menu-item">Privacy Policy</a>
+                                <a href="./legal_notice.html" class="menu-item">Log out</a>
+                            </div>
+
+                        </section>
+
                     </div>
                 </div>
             </div>
