--- a/add_task.html
+++ b/add_task.html
@@ -75,7 +75,7 @@
                             onclick="toggleMenu()">
                         <section class="menu">
                             <div class="menu-btns">
-                                <a href="#" class="menu-item">Help</a>
+                                <a href="./hilfe.html" class="menu-item">Help</a>
                                 <a href="./legal_notice.html" class="menu-item">Legal Notice</a>
                                 <a href="./datenschutz.html" class="menu-item">Privacy Policy</a>
                                 <a href="./legal_notice.html" class="menu-item">Log out</a>
