--- a/sign_up.html
+++ b/sign_up.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./styles/signup.css">
+    <script src="./scripts/script.js"></script>
     <script defer src="./scripts/signup.js"></script>
 
     <title>sign up in progress</title>
@@ -61,7 +62,7 @@
                                     
                         </div>
                         <span id="errorPrivPol"></span> <!--onclick="showSignUpMsg(); return false" -->
-                        <button type="submit"  class="signup" id="submitBtn" disabled onclick="showSignUpMsg();" >Sign up</button>
+                        <button type="submit"  class="signup" id="submitBtn" disabled onclick="registerUser()" >Sign up</button>
                         <div class="signup-msg  d-none" id="signUpMsg">You have successesfully signed up</div>
                     </div>
                 </form>
